# os_lab_4

src/: CMakeLists.txt  first.c  second.c  second.h  test_dynamic.c  test_static.c
